# network_interface

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  bitbucket-pipelines.yml  package.xml
.circleci/: config.yml
include/network_interface/: common.h  network_interface.h  network_interface.h.orig  network_utils.h  network_utils.h.orig  udp_server.h
include/udp_interface/: udp_interface.h
msg/: TCPFrame.msg  UDPFrame.msg  udp_frame.msg
src/: tcp_interface.cpp  tcp_interface.cpp.orig  udp_interface.cpp  udp_server.cpp  util.cpp  utils.cpp
test/: network_interface_test.cpp
