<?xml version="1.0"?>
<package format="3">
  <name>network_interface</name>
  <version>2003.1.1</version>
  <description>Network interfaces and messages.</description>
  <license>MIT</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>

  <url type="website">http://wiki.ros.org/network_interface</url>
  <url type="bugtracker">https://github.com/astuff/network_interface/issues</url>
  <url type="repository">https://github.com/astuff/network_interface</url>

  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
